# school-of-solana

./: .gitignore  .gitmodules  Cargo.toml  README.md
1.lesson/: Docker.md  README.md  Setup.md
1.lesson/counter/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
1.lesson/counter/client/: counter.ts  main.ts  utils.ts
1.lesson/counter/program/: Cargo.toml
1.lesson/hello_world/: Anchor.toml  README.md  payer.json
1.lesson/hello_world/tests/: hello_world.ts
2.lesson/: README.md
2.lesson/hands-on/: Cargo.toml
2.lesson/hands-on/src/: data_types.rs  flow_control.rs  follow_along.rs  functions.rs  macro.rs  main.rs  ok_err.rs  option.rs  ownership.rs  person.rs  pi_naive.rs  result.rs  shadowing.rs  slices.rs  string_literal.rs  string_obj.rs  structure.rs  variable.rs
2.lesson/rust-by-example/: Cargo.toml  README.md
2.lesson/rust-by-example/expressions/: Cargo.toml
2.lesson/rust-by-example/generics/: Cargo.toml
2.lesson/rust-by-example/options/: Cargo.toml
2.lesson/rust-by-example/primitives/: Cargo.toml
2.lesson/rust-by-example/results/: Cargo.toml
2.lesson/rust-by-example/variable-bindings/: Cargo.toml
3-4.lesson/: README.md
3-4.lesson/client/: package.json  tsconfig.json
3-4.lesson/client/keys/: initializer.json  initializer_pub.json  state.json  state_pub.json
3-4.lesson/program/: Cargo.toml
3-4.lesson/program/src/: lib.rs  processor.rs
3.lesson/: README.md
3.lesson/calculator/: Anchor.toml  README.md  package.json  payer.json
3.lesson/calculator/tests/: calculator.ts
3.lesson/client/: package-lock.json
3.lesson/client/keys/: program_pub.json
3.lesson/client/src/: coin.ts  init.ts  push.ts  utils.ts
3.lesson/program/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
4.lesson/: README.md
4.lesson/bank/: Anchor.toml
4.lesson/bank/tests/: bank.ts
4.lesson/game/: Anchor.toml  Cargo.toml  package.json  payer.json
4.lesson/game/tests/: game.ts
4.lesson/puppet/: Anchor.toml
4.lesson/puppet/programs/puppet-master/: Cargo.toml
4.lesson/puppet/programs/puppet-master/src/: lib.rs
4.lesson/puppet/tests/: puppet.ts
5.lesson/: README.md
5.lesson/client/keys/: program.json  user.json  user_pub.json
5.lesson/client/src/: coin.ts  init.ts  push.ts
5.lesson/common-errors/account-already-in-use/: Anchor.toml
5.lesson/common-errors/account-already-in-use/programs/account-already-in-use/: Cargo.toml
5.lesson/common-errors/account-already-in-use/programs/account-already-in-use/src/: lib.rs
5.lesson/common-errors/account-did-not-deserialize/: Anchor.toml
5.lesson/common-errors/account-did-not-deserialize/programs/account-did-not-deserialize/: Cargo.toml
5.lesson/common-errors/account-did-not-deserialize/programs/account-did-not-deserialize/src/: lib.rs
5.lesson/common-errors/constraint-seeds/: Anchor.toml
5.lesson/program/: Cargo.toml
5.lesson/test-examples/: Anchor.toml
6.lesson/: README.md
6.lesson/bank/: Anchor.toml  payer.json
6.lesson/frontend/: README.md  package.json
6.lesson/sealevel-attacks/: Cargo.toml
6.lesson/sealevel-attacks/programs/1-account-data-matching/insecure/: Cargo.toml
6.lesson/sealevel-attacks/programs/1-account-data-matching/insecure/src/: lib.rs
6.lesson/sealevel-attacks/programs/2-owner-checks/insecure/: Cargo.toml
6.lesson/sealevel-attacks/programs/8-pda-sharing/insecure/: Cargo.toml
6.lesson/sealevel-attacks/programs/8-pda-sharing/insecure/src/: lib.rs
6.lesson/sealevel-attacks/programs/8-pda-sharing/secure/: Cargo.toml
6.lesson/sealevel-attacks/programs/8-pda-sharing/secure/src/: lib.rs
6.lesson/ticket-registry/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
6.lesson/turnstile/: Anchor.toml
6.lesson/turnstile-spl/: Anchor.toml
7.lesson/: README.md
7.lesson/account-data-matching/: Anchor.toml
7.lesson/asset-generator/: main.py
7.lesson/duplicate-mutable-accounts/: Anchor.toml
7.lesson/duplicate-mutable-accounts/.program_client/: Cargo.toml
7.lesson/duplicate-mutable-accounts/.program_client/src/: lib.rs
7.lesson/duplicate-mutable-accounts/programs/insecure/: Cargo.toml
7.lesson/duplicate-mutable-accounts/programs/insecure/src/: lib.rs
7.lesson/frontend/: package-lock.json
7.lesson/owner-checks/: Anchor.toml
7.lesson/signer-authorization/: Anchor.toml
7.lesson/signer-authorization/.program_client/: Cargo.toml
7.lesson/signer-authorization/.program_client/src/: lib.rs
7.lesson/type-cosplay/: Anchor.toml
7.lesson/type-cosplay/.program_client/: Cargo.toml
7.lesson/type-cosplay/programs/insecure/: Cargo.toml
7.lesson/type-cosplay/programs/insecure/src/: lib.rs
7.lesson/type-cosplay/programs/secure/: Cargo.toml
7.lesson/type-cosplay/programs/secure/src/: lib.rs
8.lesson/account-data-matching/.program_client/: Cargo.toml
8.lesson/account-data-matching/programs/insecure/: Cargo.toml
8.lesson/account-data-matching/programs/insecure/src/: lib.rs
8.lesson/account-data-matching/trdelnik-tests/: Cargo.toml
8.lesson/account-data-matching/trdelnik-tests/tests/: test.rs
8.lesson/owner-checks/.program_client/: Cargo.toml
8.lesson/owner-checks/.program_client/src/: lib.rs
8.lesson/owner-checks/trdelnik-tests/: Cargo.toml
Bonus-Pinocchio/: README.md
Bonus-Pinocchio/vault/: Cargo.toml
Bonus-SPL-Token/: README.md
Bonus-SPL-Token/escrow-example/: Cargo.toml  README.md  package.json  payer.json
Bonus-SPL-Token/escrow-example/programs/escrow_program/: Cargo.toml
Bonus-SPL-Token/escrow-example/programs/escrow_program/src/: lib.rs  state.rs
Bonus-SPL-Token/escrow-example/programs/escrow_program/src/instructions/: mod.rs
Bonus-SPL-Token/lesson-example/: Anchor.toml  README.md  package.json
Bonus-Token-2022/: README.md
Bonus-Tokens/: README.md
Bonus-Tokens/escrow-example/: Anchor.toml  README.md  package.json
Bonus-Tokens/token-example/: Anchor.toml  README.md  package-lock.json  package.json
Bonus-Trident/: README.md
Common Issues/: README.md
Solana Handbook/: solana handbook.md
homework/auction/: Anchor.toml  README.md
(+245 files in other folders)
