[package]
name = "program_client"
version = "0.1.0"
edition = "2018"

[dependencies]
trdelnik-client = "0.1.6"

[dependencies.type-cosplay-insecure]
path = "../programs/insecure"
features = ["no-entrypoint"]

[dependencies.type-cosplay-secure]
path = "../programs/secure"
features = ["no-entrypoint"]
