[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
trdelnik-client = "0.1.6"
spl-token = "3.2.0"
anchor-spl = "0.24.2"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.account-data-matching-insecure]
path = "../programs/insecure"

[dev-dependencies.account-data-matching-secure]
path = "../programs/secure"
